--- a/Areas/Admin/Views/Product/Index.cshtml
+++ b/Areas/Admin/Views/Product/Index.cshtml
@@ -88,3 +88,16 @@
         </div>
     </div>
 </div>
+
+@if (TempData["ErrorMessages"]?.ToString().Length > 0)
+{
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        
+        Swal.fire({
+            icon: "info",
+            title: "Oops...",
+            text: "Some of additional photos didn't created!'",
+        });
+    </script>
+}
