--- a/Areas/Admin/Views/Product/Update.cshtml
+++ b/Areas/Admin/Views/Product/Update.cshtml
@@ -76,6 +76,11 @@
                         <input asp-for="SalePrice" class="form-control" placeholder="Sale Price">
                         <span class="text-danger" asp-validation-for="SalePrice"></span>
                     </div>
+                    <div class="form-group">
+                        <label asp-for="Discount">Discount:</label>
+                        <input asp-for="Discount" class="form-control" placeholder="Discount">
+                        <span class="text-danger" asp-validation-for="Discount"></span>
+                    </div>
                     <button type="submit" class="btn btn-primary me-2">Update</button>
                     <button asp-controller="category" asp-action="index" class="btn btn-light">Cancel</button>
                 </form>
