--- a/Views/Shop/Details.cshtml
+++ b/Views/Shop/Details.cshtml
@@ -128,32 +128,30 @@
             <div class="owl-carousel related-carousel">
                 @foreach (Product product in Model.SimilarProducts)
                 {
-                <div class="product-item bg-light">
-                    <div class="product-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="~/uploads/product/main/@product.Images.FirstOrDefault()" alt="">
-                        <div class="product-action">
-                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>
-                            <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
-                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>
-                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>
+                    <div class="product-item bg-light">
+                        <div class="product-img position-relative overflow-hidden">
+                            <img class="img-fluid w-100" style="width:100%;" src="~/uploads/product/main/@product.Images.FirstOrDefault().ImageUrl" alt="">
+                            <div class="product-action">
+                                <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>
+                                <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
+                                <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>
+                                <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="text-center py-4">
-                        <a class="h6 text-decoration-none text-truncate" href="">Product Name Goes Here</a>
-                        <div class="d-flex align-items-center justify-content-center mt-2">
-                                <h5>$@product.SalePrice</h5>
-                                @if (product.Discount > 0)
-                                {
-                                    <h6 class="text-muted ml-2"><del>$@(product.SalePrice - product.Discount)</del></h6>
+                        <div class="text-center py-4">
+                            <a class="h6 text-decoration-none text-truncate" href="">@product.Name</a>
+                            <div class="d-flex align-items-center justify-content-center mt-2">
+                                    <h5>$@product.SalePrice</h5>
+                                    @if (product.Discount > 0)
+                                    {
+                                        <h6 class="text-muted ml-2"><del>$@(product.SalePrice - product.Discount)</del></h6>
 
-                                }
-                        </div>
+                                    }
+                            </div>
                      
+                        </div>
                     </div>
-                </div>
-                    
                 }
-           
             </div>
         </div>
     </div>
