--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -121,11 +121,11 @@
                 <div class="text-center py-4">
                         <a class="h6 text-decoration-none text-truncate" asp-controller="shop" asp-action="details" asp-route-id="@product.Id">@product.Name</a>
                     <div class="d-flex align-items-center justify-content-center mt-2">
-                            <h5>$@product.SalePrice</h5>
+                            <h5>$@(product.SalePrice - product.Discount)</h5>
                             @if (product.Discount > 0)
                             {
-                            <h6 class="text-muted ml-2"><del>$@(product.SalePrice - product.Discount)</del></h6>
-                                
+                                <h6 class="text-muted ml-2"><del>$@product.SalePrice</del></h6>
+
                             }
                     </div>
                   
@@ -183,10 +183,10 @@
                     <div class="text-center py-4">
                         <a class="h6 text-decoration-none text-truncate" href="">@product.Name</a>
                         <div class="d-flex align-items-center justify-content-center mt-2">
-                            <h5>$@product.SalePrice</h5>
+                            <h5>$@(product.SalePrice - product.Discount)</h5>
                             @if (product.Discount > 0)
                             {
-                                <h6 class="text-muted ml-2"><del>$@(product.SalePrice - product.Discount)</del></h6>
+                                <h6 class="text-muted ml-2"><del>$@product.SalePrice</del></h6>
 
                             }
                         </div>
