AddBasket added, Email confirmation added, Checout added

--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@model CartVM
 @{
-    int shipping = 10;
     decimal subtotal = 0;
 }
 
@@ -31,14 +30,15 @@
                         <th>Remove</th>
                     </tr>
                 </thead>
-                <tbody class="align-middle">
+                <tbody class="custom-table align-middle">
                     @foreach (BasketItemVM item in Model.BasketItems)
                     {
                         subtotal += item.Subtotal;
                         <tr>
                             <td class="align-middle">
                                 <img src="~/uploads/product/main/@item.ImageUrl" alt="" style="width: 50px;height:50px;margin-right:10px;">
-                                @item.Name</td>
+                                @item.Name
+                            </td>
                             <td class="align-middle">$@item.Price</td>
                             <td class="align-middle">
                                 <div class="input-group quantity mx-auto" style="width: 100px;">
@@ -49,7 +49,7 @@
                                     </div>
                                     <input type="text" class="form-control form-control-sm bg-secondary border-0 text-center" value="@item.Count">
                                     <div class="input-group-btn">
-                                        <a asp-controller="cart" asp-action="add" asp-route-id="@item.Id" class="btn btn-sm btn-primary btn-plus">
+                                        <a asp-controller="cart" asp-action="add" asp-route-id="@item.Id" id="cust-add-btn" class="btn btn-sm btn-primary btn-plus">
                                             <i class="fa fa-plus"></i>
                                         </a>
                                     </div>
@@ -58,9 +58,8 @@
                             <td class="align-middle">$@item.Subtotal</td>
                             <td class="align-middle"><a class="btn btn-sm btn-danger" asp-controller="cart" asp-action="remove" asp-route-id="@item.Id"><i class="fa fa-times"></i></a></td>
                         </tr>
-                        
                     }
-            
+
                 </tbody>
             </table>
         </div>
@@ -80,20 +79,31 @@
                         <h6>Subtotal</h6>
                         <h6>$@subtotal</h6>
                     </div>
-                    <div class="d-flex justify-content-between">
-                        <h6 class="font-weight-medium">Shipping</h6>
-                        <h6 class="font-weight-medium">$@shipping</h6>
-                    </div>
                 </div>
                 <div class="pt-2">
                     <div class="d-flex justify-content-between mt-2">
                         <h5>Total</h5>
-                        <h5>$@(subtotal + shipping)</h5>
+                        <h5>$@subtotal</h5>
                     </div>
-                    <button class="btn btn-block btn-primary font-weight-bold my-3 py-3">Proceed To Checkout</button>
+                    <a class="btn btn-block btn-primary font-weight-bold my-3 py-3" asp-controller="checkout" asp-action="index">Proceed To Checkout</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
 <!-- Cart End -->
+@* <script>
+    const btns = document.querySelectorAll("#cust-add-btn")
+    const renderDiv = document.querySelector(".custom-table")
+    btns.forEach(btn => {
+        btn.addEventListener("click", (e) => {
+            e.preventDefault();
+            const endpoint = btn.getAttribute("href");
+            fetch(endpoint)
+                .then(res => res.text())
+                .then(data => {
+                    renderDiv.innerHTML = data
+                })
+        })
+    })
+</script> *@
