--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -43,3 +43,18 @@
         </div>
     </div>
 </div>
+
+@if (ViewBag.ConfirmModal is not null)
+{
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        Swal.fire({
+            icon: "success",
+            title: "Please, confirm your account!",
+            text: "We sent a confirm link, check your email :)"
+
+        });
+
+    </script>
+}
+
