--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -232,3 +232,16 @@
     </div>
 </div>
 <!-- Vendor End -->
+@if (TempData["Confirmed"] is not null)
+{
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        Swal.fire({
+            icon: "success",
+            title: "Succesfully confirmed!",
+            text: "Enjoy with us site, good luck! :)"
+
+        });
+
+    </script>
+}
