--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -62,14 +62,14 @@
                         <div class="dropdown-menu dropdown-menu-right">
                             @if (User.Identity.IsAuthenticated)
                             {
-                                <a class="dropdown-item" type="button" asp-controller="user" asp-action="profile">@User.Identity.Name.ToUpper()</a>
-                                <a class="dropdown-item" type="button" asp-controller="user" asp-action="logout">Logout</a>
+                                <a class="dropdown-item" type="button" asp-controller="account" asp-action="profile">@User.Identity.Name.ToUpper()</a>
+                                <a class="dropdown-item" type="button" asp-controller="account" asp-action="logout">Logout</a>
 
                             } 
                             else
                             {
-                                <a class="dropdown-item" type="button" asp-controller="user" asp-action="register" asp-route-returnUrl="@Context.Request.Path.Value">Register</a>
-                                <a class="dropdown-item" type="button" asp-controller="user" asp-action="login" asp-route-returnUrl="@Context.Request.Path.Value">Login</a>
+                                <a class="dropdown-item" type="button" asp-controller="account" asp-action="register">Register</a>
+                                <a class="dropdown-item" type="button" asp-controller="account" asp-action="login" asp-route-returnUrl="@Context.Request.Path.Value">Login</a>
                                 
                             }
                         </div>
