--- a/Views/Shop/Details.cshtml
+++ b/Views/Shop/Details.cshtml
@@ -1,5 +1,9 @@
 ﻿ 
 @model DetailVM
+@{
+    int count = 1;
+    Console.WriteLine(count);
+}
 <!-- Breadcrumb Start -->
 <div class="container-fluid">
     <div class="row px-xl-5">
@@ -65,21 +69,21 @@
                 <div class="d-flex align-items-center mb-4 pt-2">
                     <div class="input-group quantity mr-3" style="width: 130px;">
                         <div class="input-group-btn">
-                            <button class="btn btn-primary btn-minus">
+                            <button  class="custom-dec-btn btn btn-primary btn-minus">
                                 <i class="fa fa-minus"></i>
                             </button>
                         </div>
-                        <input type="text" class="form-control bg-secondary border-0 text-center" value="1">
+                        <input type="text" class="form-control bg-secondary border-0 text-center" value="@count">
                         <div class="input-group-btn">
-                            <button class="btn btn-primary btn-plus">
+                            <button class="custom-incr-btn btn btn-primary btn-plus">
                                 <i class="fa fa-plus"></i>
                             </button>
                         </div>
                     </div>
-                    <button class="btn btn-primary px-3">
+                    <a class="btn btn-primary px-3" asp-controller="cart" asp-action="add" asp-route-id="@Model.Product.Id" asp-route-count="@count" asp-route-returnUrl="@Context.Request.Path.Value">
                         <i class="fa fa-shopping-cart mr-1"></i> Add To
                         Cart
-                    </button>
+                    </a>
                 </div>
                 <div class="d-flex pt-2">
                     <strong class="text-dark mr-2">Share on:</strong>
@@ -157,3 +161,12 @@
     </div>
 </div>
 <!-- Products End -->
+
+<script>
+    const incrBtn = document.querySelector(".custom-incr-btn");
+    incrBtn.addEventListener("click", (e) =>);
+    const decBtn = document.querySelector(".custom-dec-btn");
+    decBtn.addEventListener("click",(e) => );
+
+
+</script>
